# 3d-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
src/: camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
